[project]
name = "epraya"
version = "0.1.18"
description = "Python package for EPR simulation"
authors = [
    {name = "Epraya developers"}
]
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "numpy (<2.5)",
    "scipy (>=1.18.0)",
    "matplotlib (>=3.11.0)",
    "ipywidgets (>=8.1.8)",
    "ipython (>=9.11.0)",
    "pandas (>=3.0.3)",
    "jax (>=0.11.0)",
    "chex (>=0.1.92)",
    "optax (>=0.2.8)",
    "jaxlib (>=0.11.0)",
    "numba (>=0.66.0)",
    "joblib (>=1.5.3)",
    "threadpoolctl (>=3.0.0)",
    "plotly (>=6.9.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
